--- a/package.json
+++ b/package.json
@@ -9,25 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "antd": "^5.7.2",
+    "@xeger/quill-image-actions": "^0.7.1",
+    "@xeger/quill-image-formats": "^0.7.1",
+    "antd": "^5.7.3",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.2",
-    "next": "13.4.9",
+    "next": "^13.4.13-canary.6",
     "next-images": "^1.8.5",
+    "nextjs-progressbar": "^0.0.16",
+    "quill-image-resize": "^3.0.9",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
+    "sass": "^1.65.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^10.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@types/aos": "^3.0.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/react-slick": "^0.23.10"
   }
 }
