config vercel json v3

--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,20 @@
     "version": 2,
     "builds": [
       {
-        "src": "app/api/**/*.ts",
+        "src": "app/api/**/*.{ts,tsx}",
         "use": "@vercel/node",
         "config": {
           "maxLambdaSize": "50mb"
         }
       },
       {
-        "src": "public/**",
-        "use": "@vercel/static"
+        "src": "app/**",
+        "use": "@vercel/next"
       }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/app/api/$1" },
-      { "src": "/(.*)", "dest": "/$1" }
+      { "src": "/(.*)", "dest": "/app/$1" }
     ]
   }
   
