--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "app/api/**/*.{ts,tsx}",
+        "src": "app/api/**/*.ts",
         "use": "@vercel/node",
         "config": {
           "maxLambdaSize": "50mb"
