--- a/vercel.json
+++ b/vercel.json
@@ -7,15 +7,12 @@
         "config": {
           "maxLambdaSize": "50mb"
         }
-      },
-      {
-        "src": "app/**",
-        "use": "@vercel/next"
       }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/app/api/$1" },
-      { "src": "/(.*)", "dest": "/app/$1" }
-    ]
+        { "src": "/api/(.*)", "dest": "/api/$1" },
+        { "src": "/(.*)", "dest": "/$1" }
+      ]
+      
   }
   
