--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app/api/**/*.ts",
-        "use": "@vercel/node",
-        "config": {
-          "maxLambdaSize": "50mb"
-        }
-      }
-    ],
-    "routes": [
-        { "src": "/api/(.*)", "dest": "/api/$1" },
-        { "src": "/(.*)", "dest": "/$1" }
-      ]
-      
-  }
-  
+  "rewrites": [
+    {"source": "/(.*)","destination":"/"}
+  ]
+}
