Config  vercel.json to vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "app/api/**/*.ts",
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
+    },
+    {
+      "src": "app/**/*.tsx",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/app/api/$1" },
+    { "src": "/(.*)", "dest": "/app/$1" }
+  ]
 }
