--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,14 @@
       }
     },
     {
-      "src": "app/**/*.tsx",
+      "src": "app/**/*.tsx",  
       "use": "@vercel/next"
     }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/app/api/$1" },
     { "src": "/(.*)", "dest": "/app/$1" }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+
 }
